Fix submit button text for search, align center

--- a/Frontend/src/scss/_search-page.scss
+++ b/Frontend/src/scss/_search-page.scss
@@ -34,6 +34,7 @@ $search-color: #4973a0;
         background-color: $search-color;
         border: 0;
         align-items: center;
+        display: flex;
     }
 }
 
